fix auto scroll to about section on mobile

--- a/src/components/Contact.module.css
+++ b/src/components/Contact.module.css
@@ -92,6 +92,8 @@
   @media (max-width: 767px) {
     .contactContainer {
     font-size: .90rem;
+    margin-left: .6em;
+    margin-right: .6em;
     
     }
     
