--- a/src/components/Hello.module.css
+++ b/src/components/Hello.module.css
@@ -1,8 +1,8 @@
 .hello {
   display: flex;
   flex-direction: column;
-
   align-items: center;
+  height: 100vh;
 }
 
 .typed {
@@ -67,27 +67,13 @@
     inset 0 0 0.5em 0.25em var(--glow-color);
 }
 
-/* .glow {
-  animation: glow 1s ease-in-out infinite alternate;
-}
-
-@keyframes glow {
-  from {
-    box-shadow: 0 0 5px #fff, 0 0 15px #fff, 0 0 20px #fff,
-      0 0 30px #fff, 0 0 40px #fff, 0 0 55px #fff,
-      0 0 75px #fff;
-  }
-  to {
-    box-shadow: 0 0 5px #fff, 0 0 15px #fff, 0 0 20px #fff,
-      0 0 30px #7b4fff, 0 0 40px #7b4fff, 0 0 55px #7b4fff,
-      0 0 75px #7b4fff;
-  }
-} */
 
 
 @media (max-width: 767px) {
   .typed {
-    margin-bottom: 100em;
+
+  /* padding-left: .1em;
+  padding-right: .1em; */
   }
 
   .btnHello {
